Fix: change mode of bringing out nav on mobile
change mode from transform: scaleY to grid
apply opacity to further enhance the switching from home page to projects page

--- a/src/style.css
+++ b/src/style.css
@@ -8,15 +8,15 @@
 
 body {
   font-family: 'poppins';
-  background-color: #ebe6e6;
+  background-color: #999;
 }
 
 .container {
-  width: clamp(16rem, 90%, 70rem); /* min, preferred, max */
+  width: clamp(16rem, 90%, 70rem);
   margin-inline: auto;
   padding-top: 20px;
   padding-bottom: 30px;
-  background-color: #ebe6e6;
+  background-color: #999;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   position: relative;
 }
@@ -26,10 +26,14 @@ nav {
   background-color: rgba(200, 200, 200, 0.6);
   border-radius: 12px;
   margin-inline: 20px;
+  display: grid;
+  grid-template-rows: 45px 0fr;
+  transition: grid-template-rows 400ms ease-in-out;
 }
 
 .nav-container {
   max-width: 100%;
+  width: 100%;
   padding: 5px;
   margin: 0 auto;
   display: flex;
@@ -44,27 +48,14 @@ nav {
   background-color: rgba(200, 200, 200, 0.6);
   width: 100%;
   border-radius: 12px;
-  transform-origin: top;
-  display: none;
 }
 
-.nav-bar.visible {
-  animation: expand 600ms ease-in-out;
-  display: block;
+nav.visible {
+  grid-template-rows: 45px 1fr;
 }
-
-@keyframes expand {
-  0% {
-    transform: scaleY(0);
-  }
-  70% {
-    transform: scaleY(1.1);
-  }
-  100% {
-    transform: scaleY(1);
-  }
+nav > .nav-bar {
+  overflow: hidden;
 }
-
 .nav-bar ul {
   display: flex;
   flex-direction: column;
@@ -109,19 +100,26 @@ main {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  transition: opacity 500ms ease-out;
+  transition:
+    opacity 1000ms ease-out,
+    display 1000ms;
   opacity: 1;
   padding-inline: 1rem;
 }
 
 main > * {
-  border: 1px solid silver;
+  border: 3px solid silver;
   border-radius: 20px;
   padding: 10px;
 }
 main.off {
   display: none;
   opacity: 0;
+}
+@starting-style {
+  main {
+    opacity: 0;
+  }
 }
 .about-me-container {
   display: flex;
@@ -160,7 +158,7 @@ main.off {
 }
 .js {
   outline: 2px solid silver;
-  width: max-content;
+  max-width: 160px;
   padding: 7px;
   border-radius: 10px;
 }
@@ -174,6 +172,16 @@ main.off {
   outline: none;
   border: none;
   align-self: flex-end;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.see-more span {
+  width: 17px;
+  height: 17px;
+}
+.see-more span > img {
+  max-width: 100%;
 }
 .see-more:hover,
 .see-more:focus {
@@ -196,14 +204,23 @@ main.off {
   text-align: center;
   border-radius: 6px;
 }
+.skills-image {
+  background-color: #111;
+  border-radius: 18px;
+  margin-top: 15px;
+  flex: 1;
+}
 section {
   display: none;
   opacity: 0;
-  transition: opacity 500ms ease-out;
+  transition:
+    opacity 1000ms,
+    display 1000ms allow-discrete;
 }
 .section {
   position: relative;
 }
+
 section.on {
   margin-top: 30px;
   display: flex;
@@ -213,10 +230,49 @@ section.on {
   gap: 20px;
   min-height: 100vh;
 }
+@starting-style {
+  section.on {
+    opacity: 0;
+  }
+}
 .in-touch-container {
-  border: 2px solid #c0c0c0;
-  padding: 15px;
-  border-radius: 12px;
+  border: 3px solid #c0c0c0;
+  padding: 30px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-height: 60vh;
+}
+.in-touch-container > p {
+  font-size: 1.2rem;
+  font-weight: 600;
+  max-width: 70%;
+}
+.in-touch-image {
+  background-color: #000;
+  flex: 1;
+  border-radius: 20px;
+}
+.in-touch {
+  align-self: start;
+  text-decoration: none;
+}
+.in-touch button {
+  border-radius: 6px;
+  padding: 8px 12px;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  font-size: 0.9rem;
+}
+.in-touch button > span {
+  width: 15px;
+  height: 15px;
+}
+.in-touch button > span > img {
+  max-width: 100%;
 }
 .projects-container {
   display: flex;
@@ -224,13 +280,13 @@ section.on {
   gap: 20px;
 }
 .project-page {
-  border: 2px solid #c0c0c0;
+  border: 3px solid #aaa;
   padding: 2rem;
-  border-radius: 15px;
+  border-radius: 18px;
   display: flex;
   flex-direction: column;
   gap: 15px;
-  background-color: #ddd;
+  background-color: #ccc;
 }
 .project-page h3 {
   font-weight: 600;
@@ -309,13 +365,12 @@ section.on {
   .nav-bar {
     position: absolute;
     width: min-content;
-    top: 20%;
+    top: 13%;
     left: 50%;
     translate: -50%;
+    padding: 3px 10px;
     transform: scaleY(1) translateY(0px);
-    opacity: 1;
-    visibility: visible;
-    background-color: rgba(200, 200, 200, 0);
+    /* background-color: rgba(200, 200, 200, 0); */
   }
   .nav-bar ul {
     flex-direction: row;
@@ -344,6 +399,7 @@ section.on {
   .nav-bar ul > li:hover,
   .nav-bar ul > li:focus {
     background-color: unset;
+    border-radius: 10px;
   }
 
   .nav-bar ul > li:hover::after,
@@ -397,10 +453,8 @@ section.on {
     position: sticky;
     top: 115px;
     height: 77vh;
-    /* max-width: calc(50% - 30px); */
   }
   .projects-container {
-    /* margin-left: 50%; */
     z-index: 1;
   }
 }
